--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -47,6 +47,7 @@
     align-items: center;
     justify-content: center;
     -webkit-justify-content: center;
+    text-align: center;
     transition: all 0.5s ease-out;
     opacity: 0;
     pointer-events: none;
