--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -106,6 +106,7 @@
   align-items: center;
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -123,7 +124,7 @@
   gap: 3.2rem;
 }
 
-.main-nav-list > * + * {
+.main-nav-list {
   margin-left: 3.2rem;
 }
 
@@ -135,6 +136,7 @@
   font-weight: 500;
   font-size: 1.8rem;
   transition: all 0.3s;
+  text-align: center;
 }
 
 .main-nav-active:link,
